# vsh

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  shell.nix  test.fish
.agents/: AGENTS.md
tests/: check_osc133.py  conftest.py  test_audio.py  test_audio_format.py  test_config.py  test_main.py  test_mic_state.py  test_overlay.py  test_providers.py  test_server.py  test_setup.py  test_thinkers.py  test_voice_indicator.py  test_voice_input.py
vsh/: main.py
vsh/core/: audio.py  config.py  display.py  mic_state.py  provider.py  pty_shell.py  server.py  setup.py  voice_indicator.py  voice_input.py
vsh/providers/: __init__.py  audio_format.py  cli.py  gcp_stt.py  http.py  http_audio.py  ollama.py  polly.py  sarvam.py  supertonic.py  thinker.py  vosk.py
