[project]
name = "vsh"
version = "0.1.0"
description = "vsh: Voice Shell - Local Text <-> Audio interoperability engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pyaudio>=0.2.14",
    "supertonic>=0.1.0",
    "vosk>=0.3.45",
    "loguru>=0.7.2",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vsh"]
