[project]
name = "vsh"
version = "0.1.0"
description = "vsh: Voice Shell - Local Text <-> Audio interoperability engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pyaudio>=0.2.14",
    "supertonic>=0.1.0",
    "vosk>=0.3.45",
    "loguru>=0.7.2",
    "numpy",
    "inquirerpy>=0.3.4",
]

[project.scripts]
vsh = "vsh.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vsh"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
